--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -7,4 +7,10 @@ html
     script src="/js/application.js"
 
   body
+    header
+      h1 Flashcards
+      ul
+        li register
+        li login
+        li home
     == yield
