--- a/app/views/cards/show.slim
+++ b/app/views/cards/show.slim
@@ -1,1 +1,12 @@
-h2 cards show page
+h2
+  = "#{@card.deck.name} Trivia"
+h3 = @card.question
+
+form action="/cards/#{@card.id}" method="post"
+  label Enter your guess:
+  br
+  input type="text" name="guess"
+  br
+  input type="submit" value="submit your guess"
+
+== slim :'cards/_display_answer'
