--- a/app/views/cards/answer.slim
+++ b/app/views/cards/answer.slim
@@ -1,9 +1,10 @@
 h3 = @card.question
 
-- if @card.guesses.select { |guess| guess.is_correct == 't' }.any?
+- if correct_guesses_for(@card).any?
   h4 Correct!
 - else
   h4 Incorrect!
   p = "The correct answer is #{@card.answer}"
+
 form action="/decks/#{@card.deck.id}" method="post"
   input type="submit" value="Next Question"
