--- a/app/views/cards/show.slim
+++ b/app/views/cards/show.slim
@@ -1,5 +1,4 @@
-h2
-  = "#{@card.deck.name} Trivia"
+h2 = "#{@card.deck.name} Trivia"
 h3 = @card.question
 
 form action="/cards/#{@card.id}" method="post"
