basice restful routes created

--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -10,10 +10,13 @@ html
     header
       h1 Flashcards
       ul
-        a [href="/users/new"] Register
-        a [href="/users/login"] Login
-        a [href="/logout"] Logout
         a [href="/"] Home
-        form action="/users/logout" method="post"
-          input type="submit" value="Login"
+        - if logged_in?
+          'username'
+          form action="/users/logout" method="post"
+            input type="submit" value="Logout"
+        - else
+          a [href="/users/new"] Register
+          a [href="/users/login"] Login
+
     == yield
