--- a/app/views/users/login.slim
+++ b/app/views/users/login.slim
@@ -10,7 +10,7 @@ form action="/users/login" method="post"
   br
   label  Password
   br
-  input type="password" name="user[password]"
+  input type="password" name="user[hashed_password]"
   br
   input type="submit" value="Login"
 
