--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -10,6 +10,6 @@ p
     br
     label  Password
     br
-    input type="password" name="user[password]"
+    input type="password" name="user[hashed_password]"
     br
     input type="submit" value="Sign Up"
