--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -3,6 +3,7 @@ html
   head
     link rel="stylesheet" href="/css/normalize.css"
     link rel="stylesheet" href="/css/application.css"
+    link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     script src="/js/application.js"
 
@@ -11,7 +12,7 @@ html
       h1 Flashcards
       ul
         - if logged_in?
-          a[href="/users/profile"] #{current_user[:user_name]}
+          a[class="btn btn-primary" href="/users/profile"] #{current_user[:user_name]}
           form action="/users/logout" method="post"
             input type="submit" value="Logout"
         - else
