--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -1,15 +1,12 @@
 h1 Welcome to Flashcards!
 p
   | The world's premier DBC flashcard site.
+  div
   form action="/users" method="post"
-    br
-    label Username
-    br
-    input type="text" name="user[user_name]"
-    br
-    br
+  div class="form-group"
+      label Username
+      input type="text" class="form-control" name="user[user_name]"
+  div class="form-group"
     label  Password
-    br
-    input type="password" name="user[hashed_password]"
-    br
-    input type="submit" value="Sign Up"
+    input type="password" class="form-control" name="user[hashed_password]"
+    input type="submit" class="btn btn-default" value="Sign Up"
