Revert "Add error handling"
This reverts commit eedd3eb1264b72a69bcb5ed52096071dd90bd76d.

--- a/app/views/users/login.slim
+++ b/app/views/users/login.slim
@@ -1,7 +1,7 @@
 h1 Welcome
 p
   Please Login to access all of our features!
-  == slim :'users/errors' if @errors && @errors.any?
+  = 'users/errors' if @errors && @errors.any?
 form action="/users/login" method="post"
   label Username
   br
