--- a/app/views/users/login.slim
+++ b/app/views/users/login.slim
@@ -1,7 +1,6 @@
 h1 Welcome
-p
-  Please Login to access all of our features!
-  = 'users/errors' if @errors && @errors.any?
+p Please Login to access all of our features!
+  == slim :'users/errors' if @errors && @errors.any?
 form action="/users/login" method="post"
   label Username
   br
